<resources>
    <string name="app_name">Expanse Manager</string>
    <string name="month">Month:</string>
    <string name="current_month_total_value">current_month_total_value</string>
    <string name="current_month_balance">Current month balance:</string>
    <string name="income">Income:</string>
    <string name="type_in_place">Type in place...</string>
    <string name="type_in_category">Type in Category...</string>
    <string name="type_in_date">Type in Date</string>
    <string name="type_in_amount">Type in Amount...</string>
    <string name="add">Add</string>
    <string name="share">Share</string>
    <string name="date">Date:</string>
    <string name="place">Place:</string>
    <string name="amount">Amount:</string>
    <string name="category">Category:</string>
    <string-array name="monthList">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
